fix: stop table head squish refactor: minor aesthetic changes to table

--- a/frontend/src/components/table/Table.css
+++ b/frontend/src/components/table/Table.css
@@ -6,23 +6,22 @@
     border: 1px solid #ccc;
 }
 
-table,
-th,
-td {
-    width: auto;
-    min-width: 0%;
+table {
+    width: max-content;
     border-collapse: collapse;
-    border: 3px solid black;
 }
 
-th,
 td {
-    padding: 10px;
+    padding: 0.75rem;
+    border-right: 3px solid black;
+    border-bottom: 3px solid black;
+    border-left: 3px solid black;
 }
 
 th {
     position: sticky;
     top: 0;
     z-index: 1;
+    padding: 0.75rem;
     background-color: black;
 }
